feat: adding swagger documentation for the exixting requests
